# epaper-central

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Doxyfile  LICENSE  epaper-central.pc.in  readme.md
docs/: api.rst  building.rst  conf.py  epaperd.rst  index.rst
epaperd/: CMakeLists.txt  default.ppm  epaperd.c  font.h  ppm.h  util.c  util.h
include/: epaper-central.h
src/: epaper-central.c  md5.c  md5.h  proto.h
